--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,13 @@
     <artifactId>jmoordbdiannaexample</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>jmoordbdianna</artifactId>
+            <version>0.1</version>
+        </dependency>
+    </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
